# JDBotPersonal

./: B.py  BotConfig.py  README.md  main.py  package_install_log  pyproject.toml  requirements.txt
cogs/: Bot.py  bot.py  buttons.py  listeners.py  tester.py
